--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="https://www.facebook.com/share/161Gs95rLo/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i> Facebook</a></li>
             <li><a href="https://youtube.com/@kachambachorus?si=G8s7nUNxV27tHQP7" target="_blank" class="youtube"><i class="fab fa-youtube"></i> YouTube</a></li>
             <li><a href="https://www.tiktok.com/@kachokambassadors?_t=ZM-8uCalOpRisf&_r=1" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> TikTok</a></li>
-            <li><a href="your_spotify_link" target="_blank" class="spotify"><i class="fab fa-spotify"></i> Spotify</a></li>
+            <li><a href="https://open.spotify.com/artist/6w0ZfVIEtqgYSzsrtZds3O?si=1LLvaCspTfCz2B-1NYlT9w" target="_blank" class="spotify"><i class="fab fa-spotify"></i> Spotify</a></li>
         </ul>
     </section>
 
